<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.texttechnologylab.duui.component</groupId>
    <artifactId>duui-youtube-downloader</artifactId>
    <version>0.1</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <ttlab.duui.version>1.4.1</ttlab.duui.version>
        <ttlab.typesystem.version>3.0.5</ttlab.typesystem.version>
    </properties>

    <licenses>
        <license>
            <name>AGPL-3.0-or-later</name>
            <url>https://www.gnu.org/licenses/agpl.txt</url>
            <distribution>repo</distribution>
            <comments>GNU Affero General Public License v3.0 or later</comments>
        </license>
    </licenses>

    <organization>
        <name>Texttechnology Lab</name>
        <url>https://www.texttechnologylab.org</url>
    </organization>

    <developers>
        <developer>
            <id>mehler</id>
            <name>Prof. Dr. Alexander Mehler</name>
            <email>mehler@em.uni-frankfurt.de</email>
            <url>https://www.texttechnologylab.org/team/alexander-mehler/</url>
            <organization>Goethe University Frankfurt / Texttechnology Lab</organization>
            <organizationUrl>https://www.texttechnologylab.org</organizationUrl>
            <roles>
                <role>head of department</role>
            </roles>
        </developer>
        <developer>
            <id>abrami</id>
            <name>Giuseppe Abrami</name>
            <email>abrami@em.uni-frankfurt.de</email>
            <url>https://www.texttechnologylab.org/team/giuseppe-abrami/</url>
            <organization>Goethe University Frankfurt / Texttechnology Lab</organization>
            <organizationUrl>https://www.texttechnologylab.org</organizationUrl>
            <roles>
                <role>lead developer</role>
            </roles>
            <timezone>Europe/Berlin</timezone>
        </developer>
        <developer>
            <id>bundan</id>
            <name>Daniel Bundan</name>
            <email>bundan@em.uni-frankfurt.de</email>
            <organization>Goethe University Frankfurt / Texttechnology Lab</organization>
            <organizationUrl>https://www.texttechnologylab.org</organizationUrl>
            <timezone>Europe/Berlin</timezone>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                        --add-opens java.base/java.util=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                        --add-opens java.base/java.util=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>com.github.texttechnologylab</groupId>
            <artifactId>UIMATypeSystem</artifactId>
            <version>${ttlab.typesystem.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.texttechnologylab</groupId>
            <artifactId>DockerUnifiedUIMAInterface</artifactId>
            <version>${ttlab.duui.version}</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.9.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.dkpro.core</groupId>
            <artifactId>dkpro-core-io-xmi-asl</artifactId>
            <version>2.4.0</version>
        </dependency>

    </dependencies>
</project>
